--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,24 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         URI-ImpliedBase
-version:      0.06
-version_from: lib/URI/ImpliedBase.pm
-installdirs:  site
+--- #YAML:1.0
+name:               URI-ImpliedBase
+version:            0.07
+abstract:           URIs that magically set a default base
+author:
+    - Joe McMahon (mcmahon@ibiblio.org)
+license:            artistic
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    Cwd:                           0
-    Test::Simple:                  0.44
-    URI:                           0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.28
+    Cwd:           0
+    Test::Simple:  0.44
+    URI:           0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.54
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
