Import of MCMAHON/URI-ImpliedBase-0.08 from CPAN.
gitpan-cpan-distribution: URI-ImpliedBase
gitpan-cpan-version:      0.08
gitpan-cpan-path:         MCMAHON/URI-ImpliedBase-0.08.tar.gz
gitpan-cpan-author:       MCMAHON
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,24 +1,24 @@
---- #YAML:1.0
-name:               URI-ImpliedBase
-version:            0.07
-abstract:           URIs that magically set a default base
+---
+abstract: 'URIs that magically set a default base'
 author:
-    - Joe McMahon (mcmahon@ibiblio.org)
-license:            artistic
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Joe McMahon (mcmahon@ibiblio.org)'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Cwd:           0
-    Test::Simple:  0.44
-    URI:           0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.54
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120630'
+license: artistic
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: URI-ImpliedBase
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Cwd: 0
+  Test::Simple: 0.44
+  URI: 0
+version: 0.08
